--- a/Prueva1.html
+++ b/Prueva1.html
@@ -9,5 +9,6 @@
         <h1>Encabezado nivel 1 </h1>
         <p> Este es un parrafo1</p>
         <p> Este es un parrafo2</p>
+        <p> Un parrafo mas </p>
     </body>
 </html>
